To the End of 2021 (5)

--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -298,7 +298,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đây là chỉ số tấn công thô của bạn. Bạn không nên quá dựa dẫm vào nó để đánh giá sức mạnh của nhân vật.<br> Chỉ số này ảnh hưởng đến đòn đánh thường và sát thương kĩ năng, và cả khả năng trị liệu.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -352,7 +352,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đây là chỉ số phòng thủ thô của bạn. Bạn không nên quá dựa dẫm vào nó để đánh giá sức chống chịu của nhân vật.<br> Chỉ số này làm giảm lượng sát thương gây ra từ đối thủ.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -406,7 +406,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm tăng sát thương gốc gây ra từ đòn tấn công lên X%.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -460,7 +460,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm tăng chỉ số phòng thủ gốc lên X%.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -514,7 +514,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm tăng số lượng đòn đánh thường mỗi giây lên X%.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -568,7 +568,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm tăng sát thương gốc gây ra từ các đòn vận phép lên X%.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -622,7 +622,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm tăng khả năng trúng kẻ thù từ các đòn đánh thường lên X%.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -676,7 +676,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm tăng khả năng trúng kẻ thù từ các kỹ năng lên X%.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -730,7 +730,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm tăng khả năng né tránh các đòn đánh thường. Né một đòn đánh thường sẽ làm mất đi ảnh hưởng của nó. Đối lập với Chính Xác.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -784,7 +784,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm tăng khả năng né tránh các kỹ năng. Né một kỹ năng sẽ làm mất đi ảnh hưởng của nó. Đối lập với Kỹ Chuẩn.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -838,7 +838,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm tăng khả năng bạo kích của đòn đánh thường lên X%. Đối lập với Tránh Bạo.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -892,7 +892,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm tăng khả năng bạo kích của các kĩ năng lên X%. Đối lập với Tránh Kỹ Bạo.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -910,7 +910,7 @@
         "de":"Kritische Ausfluch",
         "jp":"",
         "pt":"",
-        "vi":"Tránh Né Bạo Kích",
+        "vi":"Né Tránh Bạo Kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -946,7 +946,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm giảm khả năng bạo kích từ các đòn đánh thường xuống X%. Đối lập với Bạo Chuẩn.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1000,7 +1000,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm giảm khả năng bạo kích từ các kỹ năng xuống X%. Đối lập với Kỹ Bạo Chuẩn.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1054,7 +1054,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm tăng sức mạnh từ các đòn đánh thường lên X%. Đối lập với Giảm Bạo Kích.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1108,7 +1108,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm tăng sức mạnh từ các kỹ năng lên X%. Đối lập với Giảm Kỹ Bạo.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1162,7 +1162,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm giảm sát thương bạo kích nhận vào từ các đòn đánh thường xuống X%. Đối lập với Tăng Bạo Kích.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1216,7 +1216,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm giảm sát thương bạo kích nhận vào từ các kỹ năng xuống X%. Đối lập với Tăng Kỹ Bạo.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1270,7 +1270,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Gây thêm sát thương bỏ qua tất cả các chỉ số thuộc tính phòng thủ của mục tiêu.<br> Công Kích Thần Thánh bị ảnh hưởng bởi các Đòn Bạo Kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1324,7 +1324,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Làm tăng phần trên của phạm vi sát thương từ Tất Cả các các đòn tấn công lên X%. Phạm vi sát thương gốc là từ 100% đến 120%.",
         "ar":"",
         "it":"",
         "pl":"",
