--- a/Translation/item.json
+++ b/Translation/item.json
@@ -6040,7 +6040,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lam Hiệp Sĩ Giáp Xích Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6058,7 +6058,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tím Hiệp Sĩ Giáp Xích Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6076,7 +6076,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đỏ Hiệp Sĩ Giáp Xích Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6094,7 +6094,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lam Hiệp Sĩ Giáp Xích Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6112,7 +6112,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tím Hiệp Sĩ Giáp Xích Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6130,7 +6130,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đỏ Hiệp Sĩ Giáp Xích Nữ",
         "ar":"",
         "it":"",
         "pl":"",
