--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -2980,7 +2980,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Khi dùng Hỏa Cầu, Đạn Ma Pháp, Lôi Điện hoặc Tàn Phá sẽ có {0}% khả năng tái sử dụng lần hai.",
+        "vi": "Khi dùng Hỏa Cầu, Đạn Ma Pháp, Lôi Điện hoặc Tàn Phá sẽ có {0}% khả năng tái vận phép lần hai.",
         "ar": "",
         "it": "",
         "pl": "",
@@ -4348,7 +4348,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Tạo ra một tấm Khiên Âm U cho mục tiêu, Cộng thêm 10% Tăng Sát Thương cho mục tiêu đó. Đồng thời gây ra 90 Sát Thương Thần Kích cho kẻ địch xung quanh. Có hiệu lực trong 10 giây.",
+        "vi": "Tạo ra một tấm Khiên Âm U cho mục tiêu, Cộng thêm 10% Tăng Sát Thương cho mục tiêu đó. Đồng thời gây ra 90 Công Kích Thần Thánh cho kẻ địch xung quanh. Có hiệu lực trong 10 giây.",
         "ar": "",
         "it": "",
         "pl": "",
@@ -5374,7 +5374,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Pháp Sư ngân nga những giọng điệu cổ xưa, mang phước lành của Nữ Thần Hieviel đến cho tất cả đồng đội trong phạm vi 6 mét, Cộng thêm 15% Tăng Sát Thương và 15% Giảm Sát Thương. Tăng 30 Tốc Độ Di Chuyển cho các mục tiêu, đồng thời Hồi Máu cho các mục tiêu thêm 1% Máu Tối Đa mỗi 3 giây. Yêu cầu liên kết để duy trì hiệu ứng. Có hiệu lực trong 30 giây.",
+        "vi": "Pháp Sư ngân nga những giọng điệu cổ xưa, mang phước lành của Nữ Thần Hieviel đến cho tất cả đồng đội trong phạm vi 6 mét, Cộng thêm 15% Tăng Sát Thương và 15% Giảm Sát Thương. Tăng 30 Tốc Độ Di Chuyển cho các mục tiêu, đồng thời Hồi Máu cho các mục tiêu thêm 1% Máu Tối Đa mỗi 3 giây. Yêu cầu liên kết để duy trì hiệu ứng. Có hiệu lực trong 30 giây.(Di chuyển hoặc vận một phép bất kỳ sẽ làm mất đi hiệu ứng)",
         "ar": "",
         "it": "",
         "pl": "",
@@ -8326,7 +8326,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Các đòn Đánh Thường có khả năng đốt Năng Lượng của mục tiêu. Gây ra một lượng Thần Kích tương đương. Có {0}% khả năng đốt 10 Năng Lượng của mục tiêu",
+        "vi": "Các đòn Đánh Thường có khả năng đốt Năng Lượng của mục tiêu. Gây ra một lượng Công Kích Thần Thánh tương đương. Có {0}% khả năng đốt 10 Năng Lượng của mục tiêu",
         "ar": "",
         "it": "",
         "pl": "",
