--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4534,5 +4534,23 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.character.blessing.HOLY_ATK":{
+        "en":"HOLY",
+        "fr":"Sacrée",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
