--- a/Translation/item.json
+++ b/Translation/item.json
@@ -10403,6 +10403,24 @@
         "th":"",
         "id":""
     },
+    "item.41018.name":{
+        "en":"Bur's Blessing",
+        "fr":"Bénédiction de Bur",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "craft.levels.primary":{
         "en":"Primary",
         "fr":"Débutant",
