To the End of 2021 (6)

--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -4528,7 +4528,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"<b>Thông Tin Hệ Thống</b><br>Hãy cầu nguyện cho <i>Bur</i> để nâng cao chỉ số của bản thân. Sự ban phước giới hạn tăng tiến mỗi 5 cấp độ của nhân vật bắt đầu từ cấp độ 20. Khi tất cả phước lành đạt cấp 5, 10 và 15, bạn sẽ có thêm các chỉ số cộng thêm.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4546,7 +4546,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thần Thánh",
         "ar":"",
         "it":"",
         "pl":"",
