--- a/Translation/item.json
+++ b/Translation/item.json
@@ -6148,7 +6148,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tang Nam",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6166,7 +6166,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tang Nữ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -9748,7 +9748,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Áo Khoác Mẹ Làm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10414,7 +10414,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phước Lành Của Bur",
         "ar":"",
         "it":"",
         "pl":"",
