--- a/Translation/map.json
+++ b/Translation/map.json
@@ -287,6 +287,78 @@
         "th":"",
         "id":""
     },
+    "map.Celebeam Cave Floor 2.name":{
+        "en":"Celebeam Cave 2",
+        "fr":"Caves de Celebeam 2",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Hang Celebeam Tầng 2",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Celebeam Cave Floor 3.name":{
+        "en":"Celebeam Cave 3",
+        "fr":"Caves de Celebeam 3",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Hang Celebeam Tầng 3",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Celebeam Cave Floor 4.name":{
+        "en":"Celebeam Cave 4",
+        "fr":"Caves de Celebeam 4",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Hang Celebeam Tầng 4",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Celebeam Cave Floor 5.name":{
+        "en":"Celebeam Cave 5",
+        "fr":"Caves de Celebeam 5",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Hang Celebeam Tầng 5",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.Celebeam Hall of Elite.name":{
         "en":"Celebeam Hall of Elite",
         "fr":"Celebeam Hall d'élite",
