--- a/Translation/item.json
+++ b/Translation/item.json
@@ -9863,6 +9863,24 @@
         "th":"",
         "id":""
     },
+    "item.20011.name":{
+        "en":"Enlightened Orb",
+        "fr":"Orbe illuminé",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.21008.name":{
         "en":"Red Soul",
         "fr":"Âme Rouge",
