--- a/Translation/item.json
+++ b/Translation/item.json
@@ -9865,7 +9865,7 @@
     },
     "item.20011.name":{
         "en":"Enlightened Orb",
-        "fr":"Orbe illuminé",
+        "fr":"Orbe Illuminé",
         "es":"",
         "ch":"",
         "kr":"",
