--- a/Translation/item.json
+++ b/Translation/item.json
@@ -9874,7 +9874,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cầu Khai Sáng",
         "ar":"",
         "it":"",
         "pl":"",
