--- a/Translation/item.json
+++ b/Translation/item.json
@@ -9881,6 +9881,24 @@
         "th":"",
         "id":""
     },
+    "item.20012.name":{
+        "en":"Round Mushroom",
+        "fr":"Champignon Rond",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.21008.name":{
         "en":"Red Soul",
         "fr":"Âme Rouge",
