To the End of 2021 (8)

--- a/Translation/item.json
+++ b/Translation/item.json
@@ -9892,7 +9892,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nấm Tròn",
         "ar":"",
         "it":"",
         "pl":"",
