--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -208,7 +208,7 @@
         "de":"MP",
         "jp":"",
         "pt":"",
-        "vi":"Năng Lượng",
+        "vi":"N.Lượng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -388,7 +388,7 @@
         "de":"VERB SCH",
         "jp":"",
         "pt":"",
-        "vi":"Tăng Sát Thương",
+        "vi":"Tăng S.Thương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -442,7 +442,7 @@
         "de":"SCHMIND",
         "jp":"",
         "pt":"",
-        "vi":"Giảm Sát Thương",
+        "vi":"Giảm S.Thương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1288,7 +1288,7 @@
         "de":"Glück",
         "jp":"",
         "pt":"",
-        "vi":"Điểm May Mắn",
+        "vi":"May Mắn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1306,7 +1306,7 @@
         "de":"Glück",
         "jp":"",
         "pt":"",
-        "vi":"Điểm May mắn",
+        "vi":"May Mắn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4546,7 +4546,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thần Thánh",
+        "vi":"Thần Kích",
         "ar":"",
         "it":"",
         "pl":"",
