--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1036,7 +1036,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hàng Ngày",
         "ar":"",
         "it":"",
         "pl":"",
