--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2224,7 +2224,7 @@
         "de":"Regenbogen Umhang",
         "jp":"",
         "pt":"",
-        "vi":"Áo Choàng Cầu Vồng",
+        "vi":"Áo Choàng Bảy Sắc",
         "ar":"",
         "it":"",
         "pl":"",
