--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -208,7 +208,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Giới Hạn Vật Phẩm Mang",
+        "vi":"Lượng Vật Mang Tối Đa",
         "ar":"",
         "it":"",
         "pl":"",
