--- a/Translation/item.json
+++ b/Translation/item.json
@@ -8639,6 +8639,24 @@
         "th":"",
         "id":""
     },
+    "item.10106.name":{
+        "en":"Corrupted Heart",
+        "fr":"Coeur Corrompu",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.10500.name":{
         "en":"[D]Carrion Metal Piece",
         "fr":"[D]Pièce de Métal Nécrophage",
